--- a/CheckersDemo/Client/CheckersDemo.Client.csproj
+++ b/CheckersDemo/Client/CheckersDemo.Client.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.9" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
